--- a/JobFinder/Views/_ViewImports.cshtml
+++ b/JobFinder/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using JobFinder
 @using JobFinder.Models
 @using JobFinder.Models.AuthViewModels
-@using JobFinder.Models.JobListingViewModels
+@using JobFinder.Models.CompanyViewModels
+@using JobFinder.Data.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
