--- a/JobFinder/Views/Shared/_LoginPartial.cshtml
+++ b/JobFinder/Views/Shared/_LoginPartial.cshtml
@@ -1,10 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using JobFinder.Data.Model
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+
 
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
+@if (User?.Identity?.IsAuthenticated ?? false)
 {
     <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
