Added more functionality.

--- a/JobFinder/Areas/Employer/Views/Shared/_LoginPartial.cshtml
+++ b/JobFinder/Areas/Employer/Views/Shared/_LoginPartial.cshtml
@@ -7,6 +7,10 @@
     <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
     </li>
+      <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action = "AccountSettings">Account settings</a>
+    </li>
+
     <li class="nav-item">
         <form  class="form-inline" asp-area="" asp-controller="Account" asp-action="Logout">
             <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
@@ -21,5 +25,6 @@ else
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action = "Login">Login</a>
     </li>
-}
+}  
 </ul>
+
