--- a/JobFinder/Views/_ViewImports.cshtml
+++ b/JobFinder/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using JobFinder
-@using JobFinder.Models
-@using JobFinder.Models.AuthViewModels
-@using JobFinder.Models.CompanyViewModels
+@using JobFinder.Core.Models
+@using JobFinder.Core.Models.AuthViewModels
+@using JobFinder.Core.Models.CompanyViewModels
+@using JobFinder.Core.Models.FileViewModel
 @using JobFinder.Data.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
