--- a/JobFinder/Areas/Employer/Views/_ViewImports.cshtml
+++ b/JobFinder/Areas/Employer/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using JobFinder
-@using JobFinder.Models
-@using JobFinder.Models.JobListingViewModels
-@using JobFinder.Areas.Employer.Models.JobListingViewModels
+@using JobFinder.Core.Models
+@using JobFinder.Core.Models.UserViewModels
+@using JobFinder.Core.Models.JobListingViewModels
 @using JobFinder.Data.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
