--- a/JobFinder/Areas/Employer/Views/Shared/_Layout.cshtml
+++ b/JobFinder/Areas/Employer/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Employer" asp-controller="JobListing" asp-action="CompanyJobListings">Your job listings</a>
                         </li> 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="JobListing" asp-action="SearchForJobs">Search For Job</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
