--- a/JobFinder/Views/Shared/_Layout.cshtml
+++ b/JobFinder/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
+                        </li>                      
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="JobListing" asp-action="SearchForJobs">Search for jobs </a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
