--- a/JobFinder/Views/Shared/_LoginPartial.cshtml
+++ b/JobFinder/Views/Shared/_LoginPartial.cshtml
@@ -4,8 +4,11 @@
 <ul class="navbar-nav">
 @if (User?.Identity?.IsAuthenticated ?? false)
 {
-    <li class="nav-item">
+     <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+    </li>
+      <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action = "AccountSettings">Account settings</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="" asp-controller="Account" asp-action="Logout">
