--- a/JobFinder/Areas/Employer/Views/Shared/_Layout.cshtml
+++ b/JobFinder/Areas/Employer/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="JobListing" asp-action="SearchForJobs">Search For Job</a>
                         </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Employer" asp-controller="Company" asp-action="CompanyInterviews">Interviews schedule</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
