--- a/JobFinder/Areas/Employer/Views/_ViewImports.cshtml
+++ b/JobFinder/Areas/Employer/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using JobFinder
 @using JobFinder.Core.Models
-@using JobFinder.Core.Models.UserViewModels
+@using JobFinder.Core.Models.JobApplicationViewModels
 @using JobFinder.Core.Models.JobListingViewModels
 @using JobFinder.Data.Models
+@using JobFinder.Core.Models.InterviewViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
