--- a/JobFinder/Views/_ViewImports.cshtml
+++ b/JobFinder/Views/_ViewImports.cshtml
@@ -4,5 +4,5 @@
 @using JobFinder.Core.Models.JobListingViewModels
 @using JobFinder.Core.Models.CompanyViewModels
 @using JobFinder.Core.Models.FileViewModel
-@using JobFinder.Data.Models
+@using JobFinder.Core.Models.InterviewViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
