--- a/JobFinder/Views/Shared/_Layout.cshtml
+++ b/JobFinder/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="JobListing" asp-action="SearchForJobs">Search for jobs </a>
                         </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Interviews">Interviews</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
