--- a/JobFinder/Views/Shared/_Layout.cshtml
+++ b/JobFinder/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
+<head class="pbs-bg">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - JobFinder</title>
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/JobFinder.styles.css" asp-append-version="true" />
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">JobFinder</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+<body class="pbs-bg">
+    <header class="pbs-bg">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3 pbs-bg">
+            <div class="container-fluid pbs-bg">
+                <a class="navbar-brand pbs-bg" asp-area="" asp-controller="Home" asp-action="Index">JobFinder</a>
+                <button class="navbar-toggler pbs-bg" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between pbs-bg ">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -34,7 +34,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="wrapper container-fluid col-12 col-md-8 col-lg-10">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -50,4 +50,11 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+<style>
+        .pbs-bg {
+            background-color: wheat
+        }
+      
+
+ </style>
 </html>
