--- a/JobFinder/Areas/Employer/Views/JobListing/CompanyJobListings.cshtml
+++ b/JobFinder/Areas/Employer/Views/JobListing/CompanyJobListings.cshtml
@@ -8,21 +8,7 @@
      {
          foreach(var jobListing in Model)
          {
-             <div class="col-sm-3">
-
-               <div class="card" style="width: 18rem;">
-                               
-                       <div class="card-body">
-                       <p class="mb-3">  @jobListing?.JobTitle</p> 
-                       <p class="mb-3"> Salary: @jobListing?.SalaryPerMonth</p> 
-                        <p class="mb-3"> Category: @jobListing?.JobCategory</p> 
-                         <p class="mb-3"> Schedule: @jobListing?.Schedule</p> 
-                       <a class="mb-3 btn btn-warning" asp-area="Employer"  asp-controller="JobListing" asp-action="Edit" asp-route-id="@jobListing.Id" >Edit</a>
-                       <a class="mb-3 btn btn-danger" asp-area="Employer" asp-controller="JobListing" asp-action="Delete" asp-route-id="@jobListing.Id">Delete </a>  
-                       <a class="mb-3 btn btn-primary" asp-area="Employer" asp-controller="JobListing" asp-action="JobListingApplications" asp-route-id="@jobListing.Id">See job applications</a>  
-                       </div>
-               </div>
-            </div>
+             <partial name="_CompanyJobListingsPartial" model="jobListing"></partial>
          }
      }
     @if(!Model.Any())
