--- a/JobFinder/Views/Company/Create.cshtml
+++ b/JobFinder/Views/Company/Create.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-md-4 offset-md-4">
         <section>
-            <form id="account" method="post">
+            <form asp-controller="Company" asp-action="Create" id="account" method="post">
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="text-center mb-3">
