Worked on the company tests

--- a/JobFinder/Areas/Employer/Views/Shared/_Layout.cshtml
+++ b/JobFinder/Areas/Employer/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="Employer" asp-controller="JobListing" asp-action="Add">List a job</a>
                         </li>  
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Employer" asp-controller="JobListing" asp-action="CompanyJobListings">Your job listings</a>
+                            <a class="nav-link text-dark" asp-area="Employer" asp-controller="Company" asp-action="CompanyJobListings">Your job listings</a>
                         </li>     
                           <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Employer" asp-controller="Company" asp-action="CompanyInterviews">Interviews schedule</a>
