--- a/JobFinder/Areas/Employer/Views/Shared/_Layout.cshtml
+++ b/JobFinder/Areas/Employer/Views/Shared/_Layout.cshtml
@@ -28,8 +28,11 @@
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Employer" asp-controller="Company" asp-action="CompanyJobListings">Your job listings</a>
                         </li>     
-                          <li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Employer" asp-controller="Company" asp-action="CompanyInterviews">Interviews schedule</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Employer" asp-controller="Company" asp-action="CompanyPictures">Interviews schedule</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
