--- a/JobFinder/Areas/Employer/Views/_ViewImports.cshtml
+++ b/JobFinder/Areas/Employer/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using JobFinder.Core.Models.JobApplicationViewModels
 @using JobFinder.Core.Models.CompanyViewModels
 @using JobFinder.Core.Models.JobListingViewModels
+@using JobFinder.Core.Models.PictureViewModel
 @using JobFinder.Data.Models
 @using JobFinder.Core.Models.InterviewViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
