Worked on the JobListingService tests.

--- a/JobFinder/Views/_ViewImports.cshtml
+++ b/JobFinder/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using JobFinder.Core.Models.CompanyViewModels
 @using JobFinder.Core.Models.FileViewModel
 @using JobFinder.Core.Models.InterviewViewModel
+@using JobFinder.Core.Models.PictureViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
