--- a/JobFinder/Areas/Employer/Views/Shared/_Layout.cshtml
+++ b/JobFinder/Areas/Employer/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="Employer" asp-controller="Company" asp-action="CompanyInterviews">Interviews schedule</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Employer" asp-controller="Company" asp-action="CompanyPictures">Interviews schedule</a>
+                            <a class="nav-link text-dark" asp-area="Employer" asp-controller="Company" asp-action="CompanyPictures">Your pictures</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
