--- a/JobFinder/Views/Shared/_Layout.cshtml
+++ b/JobFinder/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                           <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Interviews">Interviews</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Company" asp-action="SearchForCompanies">Search for companies</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
