Tested the controllers.

--- a/JobFinder/Areas/Employer/Views/Company/CompanyInterviews.cshtml
+++ b/JobFinder/Areas/Employer/Views/Company/CompanyInterviews.cshtml
@@ -24,7 +24,7 @@
      @foreach (var item in Model)
             {
                 int counter = 1;
-                <td>counter</td>
+                <td>@counter</td>
              <partial name="_CompanyInterviewPartial" model="item"></partial>          
              counter++;
             }
