--- a/JobFinder/Views/Shared/_Layout.cshtml
+++ b/JobFinder/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body class="pbs-bg">
     <header class="pbs-bg">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3 pbs-bg">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3 pbs-bg">
             <div class="container-fluid pbs-bg">
                 <a class="navbar-brand pbs-bg" asp-area="" asp-controller="Home" asp-action="Index">JobFinder</a>
                 <button class="navbar-toggler pbs-bg" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -31,6 +31,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Company" asp-action="SearchForCompanies">Search for companies</a>
                         </li>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Administration" asp-controller="AdminHome" asp-action="Index">Search for companies</a>
+                        </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -54,10 +60,10 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 <style>
-        .pbs-bg {
-            background-color: wheat
+       .pbs-bg {
+            background-color:wheat
         }
-      
 
+      
  </style>
 </html>
