--- a/JobFinder/Areas/Employer/Views/Shared/_JobListingApplication.cshtml
+++ b/JobFinder/Areas/Employer/Views/Shared/_JobListingApplication.cshtml
@@ -9,6 +9,11 @@
                             
                         <a class="mb-3 btn btn-primary" asp-area="" asp-controller="Resume" asp-action="Download" asp-route-id="@Model.ResumeId">Download resume</a>
                         }
+                        @if(Model.ResumeId == null)
+                        {
+                            
+                        <p>This job seeker does not have a resume.</p>
+                        }
              </td> 
              <td> 
               <a class="mb-3 btn btn-primary" asp-area="Employer" asp-controller="Interview" asp-action="ScheduleInterview" asp-route-userId="@Model.UserId "asp-route-jobListingId="@Model.JobListingId">Arrange Interview</a>
