--- a/JobFinder/Views/JobListing/SearchForJobs.cshtml
+++ b/JobFinder/Views/JobListing/SearchForJobs.cshtml
@@ -14,7 +14,7 @@
 <div class="row-10">
     <div class="align-items-baseline">
         <section class="s">
-        <form class="input-group-sm col-10 form-inline row gy-2 gx-3 align-items-center" method="post" asp-area="" asp-controller="JobListing" asp-action="SearchForJob">          
+        <form class="input-group-sm col-10 form-inline row gy-2 gx-3 align-items-center btn btn-dark" method="post" asp-area="" asp-controller="JobListing" asp-action="SearchForJob">          
             <div>
                 <div class="row-10 offset-4">
                     <div>
@@ -62,7 +62,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="offset-4">
                 <input class="btn btn-primary" type="submit" value="Search" asp-area="" asp-controller="JobListing" asp-action="SearchForJobs">
             </div>
 
@@ -70,8 +70,8 @@
         </section>
 
     </div>
-    <div class="col-lg-9 col-md-6">
-        <h4 class="text-center">Jobs</h4>
+    <div class="col-lg-9 col-md-6 btn btn-dark">
+        <h4 class="text-center offset-3">Jobs</h4>
            @foreach(var jobListing in Model.JobLitings)
             {
                 <partial name="_SearchJobListingPartial" model="jobListing"></partial>           
