--- a/JobFinder/Views/User/Interviews.cshtml
+++ b/JobFinder/Views/User/Interviews.cshtml
@@ -25,6 +25,7 @@
      @foreach (var item in Model)
             {
              int counter = 1;
+             <td>@counter</td>
              <partial name="_UserInterviewPartial" model="item"></partial>
              
              counter++;
