Fixed some issues with the website.

--- a/JobFinder/Areas/Employer/Views/Company/CompanyJobListings.cshtml
+++ b/JobFinder/Areas/Employer/Views/Company/CompanyJobListings.cshtml
@@ -13,7 +13,7 @@
      }
     @if(!Model.Any())
     {
-        <h2>No products yet.</h2>
+        <h2>No job listings yet.</h2>
     }
      
 </div>
