--- a/JobFinder/Views/Shared/_Layout.cshtml
+++ b/JobFinder/Views/Shared/_Layout.cshtml
@@ -18,10 +18,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between pbs-bg ">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>                      
+                    <ul class="navbar-nav flex-grow-1">                                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="JobListing" asp-action="SearchForJobs">Search for jobs </a>
                         </li>
@@ -34,8 +31,8 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Administration" asp-controller="AdminHome" asp-action="Index">Search for companies</a>
-                        </li>
+                            <a class="nav-link text-dark" asp-area="Administration" asp-controller="AdminHome" asp-action="Index">Admin panel</a>
+                            </li>
                         }
                     </ul>
                     <partial name="_LoginPartial" />
