--- a/JobFinder/Views/Account/AccountSettings.cshtml
+++ b/JobFinder/Views/Account/AccountSettings.cshtml
@@ -1,12 +1,24 @@
-﻿@model FileUploadViewModel
+﻿@using JobFinder.Core.Contracts
+@using System.Security.Claims
+@model FileUploadViewModel
+@inject IUserServiceInterface userService
+<h3 class="text-center">
+       <p class="">Username : @User.FindFirstValue(ClaimTypes.Name)</p>
+       <p class="">Email : @User.FindFirstValue(ClaimTypes.Email)</p>
+</h3>
 <div class="text-center col-md-4 offset-md-4" >
      <form asp-controller="Resume" asp-action="Upload" enctype="multipart/form-data" method="post">         
-        <input asp-for="@Model.File" class="form-control" type="file"  name="file" />
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>  
+         <input class="form-control" type="file"  name="file" />
+
         <button type="submit" value="Upload"  class="btn btn-success">Upload</button>
-         <span asp-validation-for="@Model.File" class="text-danger"></span>    
+            
+        
           <a class="btn btn-danger" asp-controller="Resume" asp-action="Delete">Delete Resume</a>
           
           <a class="btn btn-warning" asp-controller="Resume" asp-action="Download">Download Resume</a>
+         
+          
      </form>
       
  </div>
