--- a/JobFinder/Views/Company/SearchForCompanies.cshtml
+++ b/JobFinder/Views/Company/SearchForCompanies.cshtml
@@ -32,13 +32,14 @@
     </div>
     @if(Model.Any())
     {
-
-    <div class="col-lg-9 col-md-6">
+  
         <h4 class="text-center">Companies</h4>
+           <div class="card-group">
            @foreach(var jobListing in Model)
             {
                 <partial name="_SearchForCompaniesPartial" model="jobListing"></partial>           
             }
-    </div>
+           </div>
+    
     }
 </div>
