--- a/JobFinder/Views/Account/AccountSettings.cshtml
+++ b/JobFinder/Views/Account/AccountSettings.cshtml
@@ -5,6 +5,7 @@
 <h3 class="text-center">
        <p class="">Username : @User.FindFirstValue(ClaimTypes.Name)</p>
        <p class="">Email : @User.FindFirstValue(ClaimTypes.Email)</p>
+<a class="btn btn-danger" asp-controller="Account" asp-action="DeleteAccount">Delete Account</a>
 </h3>
 <div class="text-center col-md-4 offset-md-4" >
      <form asp-controller="Resume" asp-action="Upload" enctype="multipart/form-data" method="post">         
