Fixed some more bugs

--- a/JobFinder/Areas/Administration/Views/Shared/_ComapanySearchPartial.cshtml
+++ b/JobFinder/Areas/Administration/Views/Shared/_ComapanySearchPartial.cshtml
@@ -2,5 +2,5 @@
 
 <td >@Model.CompanyName</td>
 <td >@Model.Description</td>
-<td><a class="btn btn-danger" asp-area="Administration" asp-controller="AdminCompany" asp-action="Delete" asp-route-id="@Model.Id" asp-route-ownerId="@Model.OwnerId">Delete</a></td>
+<td><a class="btn btn-danger" asp-area="Administration" asp-controller="AdminCompany" asp-action="DeleteCompany" asp-route-id="@Model.Id" asp-route-ownerId="@Model.OwnerId">Delete</a></td>
 
