--- a/JobFinder/Areas/Employer/Views/Company/Edit.cshtml
+++ b/JobFinder/Areas/Employer/Views/Company/Edit.cshtml
@@ -22,7 +22,7 @@
                     
                 </div>
                 <div class="text-center">
-                    <button id="login-submit" type="submit" class="btn btn-success">Create</button>
+                    <button id="login-submit" type="submit" class="btn btn-success">Edit</button>
                 </div>
             </form>
         </section>
