--- a/JobFinder/Areas/Employer/Views/JobListing/Edit.cshtml
+++ b/JobFinder/Areas/Employer/Views/JobListing/Edit.cshtml
@@ -53,7 +53,7 @@
                     </div>
 
                 <div class="text-center">
-                    <button  type="submit" class="btn btn-success">Create</button>
+                    <button  type="submit" class="btn btn-success">Edit</button>
                 </div>
             </form>
         </section>
