--- a/JobFinder/Views/Company/SearchForCompanies.cshtml
+++ b/JobFinder/Views/Company/SearchForCompanies.cshtml
@@ -12,14 +12,15 @@
 
 
 <div class="row-10">
-    <div class="align-items-baseline">
+    <div class="align-items-baseline offset-5">
         <section class="s">
         <form class="input-group-sm col-10 form-inline row gy-2 gx-3 align-items-center" method="get" asp-area="" asp-controller="Company" asp-action="SearchForCompanies">          
             <div>
-                <div class="row-10 offset-4">
-                    <div>
+                <div class="row-10 col-sm-5">
+                    <div >
                      <div class="text-center mb-3">
-                    <input type="text" name="keyword" class="form-control" aria-required="true" />
+                    <p class="text-center"> Keyword </p>
+                    <input type="text" name="keyword" class="form-control" aria-required="true" ></>
                     <input class="btn btn-primary" type="submit" value="Search" />
                     
                 </div>                     
