--- a/JobFinder/Areas/Administration/Views/AdminJobListing/SearchForJobs.cshtml
+++ b/JobFinder/Areas/Administration/Views/AdminJobListing/SearchForJobs.cshtml
@@ -13,11 +13,11 @@
 
 
 <div class="row-10">
-    <div class="align-items-baseline">
-        <section class="s">
+    <div class="align-items-baseline offset-5">
+      <section>
         <form class="input-group-sm col-10 form-inline row gy-2 gx-3 align-items-center" method="post" asp-area="" asp-controller="JobListing" asp-action="SearchForJob">          
             <div>
-                <div class="row-10 offset-4">
+                <div class="row-10 col-sm-5">
                     <div>
                      <div class="text-center mb-3">
                     <label asp-for="@Model.Keyword" class="form-label"></label>
@@ -68,13 +68,13 @@
             </div>
 
         </form>
-        </section>
+      </section>
 
     </div>
         @if (Model.JobLitings.Any())
         {
-    <div class="col-lg-9 col-md-6 ">
-        <h4 class="text-center offset-3">Jobs</h4>
+    <div class="col-lg-9 col-ms-5 ">
+        <h4 class="text-center offset-5">Jobs</h4>
             
         <table class="table table-hover table-dark">
         <thead>
