--- a/JobFinder/Areas/Administration/Views/AdminUser/SearchForUser.cshtml
+++ b/JobFinder/Areas/Administration/Views/AdminUser/SearchForUser.cshtml
@@ -13,13 +13,14 @@
 
 
 <div class="row-10">
-    <div class="align-items-baseline">
-        <section class="s">
+    <div class="align-items-baseline offset-5">
+        <section>
         <form class="input-group-sm col-10 form-inline row gy-2 gx-3 align-items-center" method="get"  asp-controller="AdminUser" asp-action="SearchForUser">          
             <div>
-                <div class="row-10 offset-4">
+                <div class="row-10 col-sm-5">
                     <div>
                      <div class="text-center mb-3">
+                         <p class="text-center"> Keyword </p>
                     <input type="text" name="keyword" class="form-control" aria-required="true" />
                     <input class="btn btn-primary" type="submit" value="Search" />
                     
