--- a/JobFinder/Views/JobListing/SearchForJobs.cshtml
+++ b/JobFinder/Views/JobListing/SearchForJobs.cshtml
@@ -12,11 +12,11 @@
 
 
 <div class="row-10">
-    <div class="align-items-baseline">
-        <section class="s">
+    <div class="align-items-baseline offset-5">
+       <section>
         <form class="input-group-sm col-10 form-inline row gy-2 gx-3 align-items-center " method="post" asp-area="" asp-controller="JobListing" asp-action="SearchForJob">          
             <div>
-                <div class="row-10 offset-4">
+                <div class="row-10 col-sm-5">
                     <div>
                      <div class="text-center mb-3">
                     <label asp-for="@Model.Keyword" class="form-label"></label>
@@ -71,7 +71,7 @@
 
     </div>
 
-        <h4 class="text-center offset-3">Jobs</h4>
+        <h4 class="text-center ">Jobs</h4>
          <div class="card-group">
            @foreach(var jobListing in Model.JobLitings)
             {
